Buy method + market view added

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
+  <link rel="stylesheet" href="bower_components/angular-ui-notification/dist/angular-ui-notification.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -21,6 +22,8 @@
   <link href="css/simple-sidebar.css" rel="stylesheet">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment-with-locales.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body ng-controller="mainCtrl">
   <div id="wrapper">
@@ -86,12 +89,12 @@
               Derniers mails
             </div>
             <ul class="sidebar-nav" style="position:relative !important;">
-              <li><a href="#"><b>Ebay</b> - Votre commande N°CX56 ...</a></li>
-              <li><a href="#"><b>Ebay</b> - Votre commande N°CX56 ...</a></li>
-              <li><a href="#"><b>Ebay</b> - Votre commande N°CX56 ...</a></li>
-              <li><a href="#"><b>Ebay</b> - Votre commande N°CX56 ...</a></li>
-              <li><a href="#"><b>Ebay</b> - Votre commande N°CX56 ...</a></li>
-              <li><a href="#"><b>Ebay</b> - Votre commande N°CX56 ...</a></li>
+              <li><a href="#"><b>Amazon</b> - Votre commande N°CX56 ...</a></li>
+              <li><a href="#"><b>Amazon</b> - Votre commande N°CX56 ...</a></li>
+              <li><a href="#"><b>Amazon</b> - Votre commande N°CX56 ...</a></li>
+              <li><a href="#"><b>Amazon</b> - Votre commande N°CX56 ...</a></li>
+              <li><a href="#"><b>Amazon</b> - Votre commande N°CX56 ...</a></li>
+              <li><a href="#"><b>Amazon</b> - Votre commande N°CX56 ...</a></li>
             </ul>
           </div>
           <div class="rightWidget">
@@ -131,6 +134,7 @@
   -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
   <script src="app.js"></script>
 
   <script src="views/dashboard/dashboard.js"></script>
