--- a/app/index.html
+++ b/app/index.html
@@ -149,5 +149,6 @@
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
+  <script src="services/fileLoader.js"></script>
 </body>
 </html>
