--- a/app/index.html
+++ b/app/index.html
@@ -167,6 +167,7 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-ui-notification/dist/angular-ui-notification.min.js"></script>
+  <script src="bower_components/angular-native-dragdrop/draganddrop.min.js"></script>
   <script src="app.js"></script>
 
   <script src="views/dashboard/dashboard.js"></script>
