--- a/app/index.html
+++ b/app/index.html
@@ -200,6 +200,7 @@
   <script src="views/management/management.js"></script>
   <script src="views/myStore/myStore.js"></script>
   <script src="views/settings/settings.js"></script>
+  <script src="views/phone/phone.js"></script>
 
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
