Add audio music

--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body ng-controller="mainCtrl">
+  <audio id="audioPlayer" src="res/audio/ambient/1.mp3"></audio>
   <div id="wrapper">
      <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
