Adding some sounds + 'install OS' mechanic

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,7 @@
 </head>
 <body ng-controller="mainCtrl">
   <audio id="audioPlayer" src="res/audio/ambient/1.mp3"></audio>
+  <audio id="soundPlayer"></audio>
   <div id="wrapper">
      <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
